--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,7 +18,10 @@
 .timerBox .timerBox__record {
   width: 100%;
   height: 30vh;
-  background-color: red;
+  background-color: darkgrey;
+  border-radius: 5px;
+  box-shadow: 2px 1px 7px #0b0b0b;
+  overflow: scroll;
 }
 
 .timerBox .timerBox__btn {
